--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.18", features = ["cargo", "string"] }
 clap_complete = "4.4.10"
+regex = "1.10.3"
+yaml-rust2 = "0.8.0"
 
 [[bin]]
 name = "bro-run"
