--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 clap = { version = "4.4.18", features = ["cargo", "string"] }
 clap_complete = "4.4.10"
 regex = "1.10.3"
+tera = "1.19.1"
 yaml-rust2 = "0.8.0"
 
 [[bin]]
